--- a/www/index.html
+++ b/www/index.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
- <html lang="en">
-   <head>
-     <meta charset="UTF-8">
-     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Document</title>
-   </head>
-   <body>
-     <h1>Hello World</h1>
-     <script src="./index.js"></script>
-   </body>
- </html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Hello World</h1>
+    <script src="./index.js"></script>
+  </body>
+</html>
 
- <!-- i32, i64, f32, f64 -->
-
- <!-- (module
-   (func $sum (param $a i32) (param $b i32) (result i32)
-     local.get $a
-     local.get $b
-     i32.add
-   )
-   (export "sum" (func $sum))
- ) -->
+<!-- we can either create memory in WebAssembly and export it to JS -->
+<!-- we can create memory in JS and import it to WebAssembly -->
+<!-- 1 means -> 1 page of memory, page has around 64KB -->
+<!-- (module
+  (import "console" "log" (func $log))
+  (import "console" "error" (func $error))
+  (memory (import "js" "mem") 1)
+  (data (i32.const 0) "Hi")
+  (func $sum (param $a i32) (param $b i32) (result i32)
+    call $log
+    call $error
+    local.get $a
+    local.get $b
+    i32.add
+  )
+  (export "sum" (func $sum))
+) -->
